-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9, 10
-
Component/s: hotspot
-
b161
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8176948 | 10 | Christian Haeubl | P3 | Resolved | Fixed | b03 |
When Truffle uses JMVCI and Graal for compiling a guest language (e.g. JavaScript), Graal heavily uses partial escape analysis. In such cases, the JVMCI method "installCode" uses lots of local JNI references when generating the corresponding debug information so that the thread's top-level JNI handle buffer will have a large size. This unnecessarily increases the footprint and significantly decreases the performance (as long as JDK-8175318 is not fixed).
- backported by
-
JDK-8176948 [JVMCI] Avoid long JNI handle chains
-
- Resolved
-