8175917: [JVMCI] Avoid long JNI handle chains

Reviewed-by: never, kvn